crates/test-ui/ui/mutability_traits_unimplementable2.stderr
error[E0277]: the trait bound `CustomStruct: mutability::private_traits::Sealed` is not satisfied
 --> ui/mutability_traits_unimplementable2.rs
  |
  | unsafe impl mutability::IsIdCloneable for CustomStruct {}
  |                                           ^^^^^^^^^^^^ the trait `ClassType` is not implemented for `CustomStruct`, which is required by `CustomStruct: mutability::private_traits::Sealed`
  |
  = help: the following other types implement trait `ClassType`:
            NSObject
            __NSProxy
  = note: required for `CustomStruct` to implement `mutability::private_traits::Sealed`
note: required by a bound in `IsIdCloneable`
 --> $WORKSPACE/crates/objc2/src/mutability.rs
  |
  | pub unsafe trait IsIdCloneable: private_traits::Sealed {}
  |                                 ^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `IsIdCloneable`
  = note: `IsIdCloneable` is a "sealed trait", because to implement it you also need to implement `objc2::mutability::private_traits::Sealed`, which is not accessible; this is usually done to force you to use one of the provided types that already implement it
  = help: the following types implement the trait:
            objc2::runtime::ProtocolObject<P>
            objc2::runtime::AnyObject
            T

error[E0277]: the trait bound `CustomStruct: IsAllowedMutable` is not satisfied
 --> ui/mutability_traits_unimplementable2.rs
  |
  | unsafe impl mutability::IsMutable for CustomStruct {}
  |                                       ^^^^^^^^^^^^ the trait `ClassType` is not implemented for `CustomStruct`, which is required by `CustomStruct: IsAllowedMutable`
  |
  = help: the following other types implement trait `ClassType`:
            NSObject
            __NSProxy
  = note: required for `CustomStruct` to implement `IsAllowedMutable`
note: required by a bound in `IsMutable`
 --> $WORKSPACE/crates/objc2/src/mutability.rs
  |
  | pub unsafe trait IsMutable: private_traits::Sealed + IsAllowedMutable {}
  |                                                      ^^^^^^^^^^^^^^^^ required by this bound in `IsMutable`
